--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ footer{
     }
 
     .BarraLateral{
-        border-radius: 10px; */
+        border-radius: 10px;
         padding: 40px;
         margin: 0px 5px 0px 10px;
         justify-content: center;
