--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ footer{
     list-style-type: none;
     border-radius: 5px;
     padding: 5px;
+    margin-top: 50px;
     /* margin-top: 5px; */
     
 }
@@ -181,6 +182,21 @@ footer{
     border-radius: 5px;
     list-style-type: none;
     justify-content: left;
+}
+
+/* ---------------------animaciones-------------------- */
+.CuadroDeDescarga__Animacion:hover{
+    background-image: linear-gradient(to top, rgb(185, 185, 185), rgb(40, 40, 40));
+    width: 50%;
+    height 95%;
+    transform: translate(10px, 20px);
+    color: white;
+    box-shadow: -40px 10px 10px rgb(1, 34, 82);
+}
+
+.ListaBarraSuperior__Animacion:hover{
+    text-shadow: 10px 10px 10px black;
+    font-weight: bold;
 }
 
 /* medias querys intermedias entre pc y celular */
