--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,8 @@
     /* usado solo en la parte de novedades */
     background-color: rgb(222, 218, 218);
     text-align: center;
-    /* padding: 30px 100px; */
-    margin: 20px;
     border-radius: 10px;
-    display: inline-block;
-    overflow: hidden;
-    /* width: 800px;
-    height: 300px; */
+    box-shadow: -40px 10px 10px rgb(1, 34, 82);
 }
 
 /*------------------- flex anterior ------------------*/
@@ -54,17 +49,12 @@ a{
     padding-bottom: 0px;
     padding-top: 0px;
     border-radius: 5px;
+    color: rgb(255, 255, 255);
 }
 
 .BarraLateral{
     border-radius: 10px;
-    padding: 40px;
-    margin: 0px 5px 0px 10px;
-    justify-content: center;
-    justify-items: center;
     border: 2px solid black;
-    overflow: hidden;
-    width: 200px;
 }
 
 h3{
@@ -93,7 +83,7 @@ h1{
     text-shadow: gray 40px;
     font-size: 50px;
     letter-spacing: 5px;
-    color: rgb(219, 6, 150);
+    color: rgb(255, 255, 255);
 }
 
 
@@ -196,7 +186,7 @@ footer{
 
 .ListaBarraSuperior__Animacion:hover{
     text-shadow: 10px 10px 10px black;
-    font-weight: bold;
+    font-weight: bold;git dd
 }
 
 /* medias querys intermedias entre pc y celular */
